updated yml file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-#server:
-#  servlet:
-#    context-path: /reposervice
+server:
+  servlet:
+    context-path: /reposervice
 
 provider-service:
   gitHub:
